--- a/index.html
+++ b/index.html
@@ -119,6 +119,37 @@
         </section>
         <!-- Slider End -->
     </header>
+    <main>
+        <!-- Catagories Start -->
+        <!-- Catagories End -->
+        <section>
+            <div class="container text-center my-5">
+                <div class="row g-2">
+                    <!-- Single Category -->
+                    <div class="col-lg-4 col-md-6 col-sm-12 col-12">
+                        <div class="p-3 border bg-warning d-flex align-items-center justify-content-around rounded-3">
+                            <h1 class="text-white">Watch</h1>
+                            <img class="w-25" src="images/categories/watch.png" alt="">
+                        </div>
+                    </div>
+                    <!-- Single Category -->
+                    <div class="col-lg-4 col-md-6 col-sm-12 col-12">
+                        <div class="p-3 border bg-success d-flex align-items-center justify-content-around rounded-3">
+                            <h1 class="text-white">Watch</h1>
+                            <img class="w-25" src="images/categories/bag.png" alt="">
+                        </div>
+                    </div>
+                    <!-- Single Category -->
+                    <div class="col-lg-4 col-md-6 col-sm-12 col-12">
+                        <div class="p-3 border bg-primary d-flex align-items-center justify-content-around rounded-3">
+                            <h1 class="text-white">Watch</h1>
+                            <img class="w-25" src="images/categories/shoes.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
