--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
                             </h5>
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                                 additional content. This content is a little bit longer.</p>
+                            <h3>$1289</h3>
                         </div>
                         <div class="m-3">
                             <div class="btn btn-warning">Buy Now</div>
@@ -174,6 +175,7 @@
                             <h5 class="card-title">Reebok Pump</h5>
                             <p class="card-text">This card has supporting text below as a natural lead-in to additional
                                 content.</p>
+                            <h3>$799</h3>
                         </div>
                         <div class="m-3">
                             <div class="btn btn-warning">Buy Now</div>
@@ -188,6 +190,7 @@
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                                 additional content. This card has even longer content than the first to show that equal
                                 height action.</p>
+                            <h3>$699</h3>
                         </div>
                         <div class="m-3">
                             <div class="btn btn-warning">Buy Now</div>
@@ -197,6 +200,57 @@
             </div>
         </section>
         <!-- Shoes section end -->
+        <!-- Backpack Section Start -->
+        <section class="container my-5">
+            <h2>Backpack</h2>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                <div class="col">
+                    <div class="card border border-0 shadow-lg h-100">
+                        <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Ison Backpack
+                            </h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                            <h3>$1289</h3>
+                        </div>
+                        <div class="m-3">
+                            <div class="btn btn-warning">Buy Now</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card border border-0 shadow-lg h-100">
+                        <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Biaowang Backpac</h5>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                                content.</p>
+                            <h3>$799</h3>
+                        </div>
+                        <div class="m-3">
+                            <div class="btn btn-warning">Buy Now</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card border border-0 shadow-lg h-100">
+                        <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Dxyizu WS54 Smart</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This card has even longer content than the first to show that equal
+                                height action.</p>
+                            <h3>$699</h3>
+                        </div>
+                        <div class="m-3">
+                            <div class="btn btn-warning">Buy Now</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Backpack Section End -->
     </main>
 </body>
 
