--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Panda Commerec</title>
     <!-- Bootstrap Stylesheet -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
@@ -44,7 +46,7 @@
         <section class="mt-5">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
-                    <div class="carousel-item active border rounded bg-info p-5">
+                    <div class="carousel-item active border rounded panda-bg-info p-5">
                         <div class="row">
                             <div class="col-lg-7 d-flex align-items-center">
                                 <div>
@@ -54,7 +56,7 @@
                                     <p>This is the best headphone in the word for people who just want to waste time in
                                         front of funky world.</p>
                                     <h1>$420</h1>
-                                    <div class="btn btn-warning">
+                                    <div class="btn panda-btn-buy-now">
                                         Buy Now
                                     </div>
                                 </div>
@@ -64,7 +66,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="carousel-item active border rounded bg-info p-5">
+                    <div class="carousel-item active border rounded panda-bg-info p-5">
                         <div class="row">
                             <div class="col-lg-7 d-flex align-items-center">
                                 <div>
@@ -74,7 +76,7 @@
                                     <p>This is the best headphone in the word for people who just want to waste time in
                                         front of funky world.</p>
                                     <h1>$1200</h1>
-                                    <div class="btn btn-warning">
+                                    <div class="btn panda-btn-buy-now">
                                         Buy Now
                                     </div>
                                 </div>
@@ -84,7 +86,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="carousel-item active border rounded bg-info p-5">
+                    <div class="carousel-item active border rounded panda-bg-info p-5">
                         <div class="row">
                             <div class="col-lg-7 d-flex align-items-center">
                                 <div>
@@ -94,7 +96,7 @@
                                     <p>This is the best headphone in the word for people who just want to waste time in
                                         front of funky world.</p>
                                     <h1>$600</h1>
-                                    <div class="btn btn-warning">
+                                    <div class="btn panda-btn-buy-now">
                                         Buy Now
                                     </div>
                                 </div>
@@ -123,7 +125,7 @@
         <!-- Catagories Start -->
         <section>
             <div class="container text-center my-5">
-                <div class="row g-1">
+                <div class="row g-4">
                     <!-- Single Category -->
                     <div class="col-lg-4 col-md-6 col-sm-12 col-12">
                         <div class="p-3 border bg-warning d-flex align-items-center justify-content-around rounded-3">
@@ -164,7 +166,7 @@
                             <h3>$1289</h3>
                         </div>
                         <div class="m-3">
-                            <div class="btn btn-warning">Buy Now</div>
+                            <div class="btn panda-btn-buy-now">Buy Now</div>
                         </div>
                     </div>
                 </div>
@@ -178,7 +180,7 @@
                             <h3>$799</h3>
                         </div>
                         <div class="m-3">
-                            <div class="btn btn-warning">Buy Now</div>
+                            <div class="btn panda-btn-buy-now">Buy Now</div>
                         </div>
                     </div>
                 </div>
@@ -193,7 +195,7 @@
                             <h3>$699</h3>
                         </div>
                         <div class="m-3">
-                            <div class="btn btn-warning">Buy Now</div>
+                            <div class="btn panda-btn-buy-now">Buy Now</div>
                         </div>
                     </div>
                 </div>
@@ -215,7 +217,7 @@
                             <h3>$1289</h3>
                         </div>
                         <div class="m-3">
-                            <div class="btn btn-warning">Buy Now</div>
+                            <div class="btn panda-btn-buy-now">Buy Now</div>
                         </div>
                     </div>
                 </div>
@@ -229,7 +231,7 @@
                             <h3>$799</h3>
                         </div>
                         <div class="m-3">
-                            <div class="btn btn-warning">Buy Now</div>
+                            <div class="btn panda-btn-buy-now">Buy Now</div>
                         </div>
                     </div>
                 </div>
@@ -244,7 +246,7 @@
                             <h3>$699</h3>
                         </div>
                         <div class="m-3">
-                            <div class="btn btn-warning">Buy Now</div>
+                            <div class="btn panda-btn-buy-now">Buy Now</div>
                         </div>
                     </div>
                 </div>
@@ -253,7 +255,7 @@
         <!-- Backpack Section End -->
         <!-- Subscription Section Start -->
         <section style="height: 350px;" id="subscribe"
-            class="container rounded-3 bg-info d-flex justify-content-center align-items-center">
+            class="container rounded-3 panda-bg-info d-flex justify-content-center align-items-center">
             <div>
                 <h2 class="text-center">LET'S STAY IN TOUCH</h2>
                 <p class="text-center">LET'S STAY IN TOUCH</p>
@@ -262,7 +264,7 @@
                         <input type="email" placeholder="Enter your email" class="form-control" id="exampleInputEmail1"
                             aria-describedby="emailHelp">
                     </div>
-                    <button type="submit" class="btn btn-warning">Submit</button>
+                    <button type="submit" class="btn panda-btn-buy-now">Submit</button>
                 </form>
             </div>
         </section>
